<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app -->
    <string name="app_name">mobile devotions 2013</string>
    <string name="scriptureUrlDefault">http://www.bibleserver.com/text/</string>

    <string-array name="scriptureEdition">
        <item>English Standard Version</item>
        <item>New International Version</item>
        <item>Today\'s New International Version</item>
        <item>New Int. Readers Version</item>
        <item>King James Version</item>
    </string-array>
    <string-array name="scriptureUrl">
        <item>http://www.bibleserver.com/text/ESV/</item>
        <item>http://www.bibleserver.com/text/NIV/</item>
        <item>http://www.bibleserver.com/text/TNIV/</item>
        <item>http://www.bibleserver.com/text/NIRV/</item>
        <item>http://www.bibleserver.com/text/KJV/</item>
    </string-array>

    <!-- common -->
    <string name="msgRemind">Don\'t forget it!</string>
    <string name="msgLoading">Loading&#8230;</string>
    <string name="listNotes">Notes</string>
    <string name="listVerses">Scripture List</string>

    <!-- main -->
    <string name="mainWeek">For the week:</string>
    <string name="mainMonth">For the month:</string>
    <string name="mainNothing">No Text found for this selection.</string>

    <!-- notes -->
    <string name="mainNote">Note</string>
    <string name="noteSave">Save</string>
    <string name="noteSaved">Note saved.</string>

    <!-- text -->
    <string name="textFrom">from</string>
    <string name="textUntil">until</string>
    <string name="widgetNoData">No text</string>
    <string name="widgetNoData2">for this date</string>

    <!-- menu -->
    <string name="menuBible">Scripture</string>
    <string name="menuToday">Today</string>
    <string name="menuDate">Select date</string>
    <string name="menuSearch">Search</string>
    <string name="menuNotes">Notes</string>
    <string name="menuList">Scripture List</string>
    <string name="menuShare">Share</string>
    <string name="menuPreference">Preferences</string>
    <string name="menuInfo">Info</string>

    <!-- search -->
    <string name="searchMessage">Please entre search term.</string>

    <!-- share -->
    <string name="shareText">Mobile devotions for you:</string>
    <string name="shareUrl">http://goo.gl/KIYndX</string>

    <!-- preferences -->
    <string name="prefWidget">Widget</string>
    <string name="prefTranslation">Bible translation</string>
    <string name="prefDisplay">Appearance (requires restart)</string>
    <string name="prefScale">Font size</string>
    <string name="prefScaleDesc"></string>
    <string name="prefInverse">Inverse colors</string>
    <string name="prefAppInverseDesc">Default is black on white</string>
    <string name="prefWidgetInverseDesc">Default is white on black</string>
    <string name="prefOther">Other</string>
    <string name="prefSplash">Splashscreen</string>
    <string name="prefSplashDesc">Mobile devotions cover at start</string>
    <string name="prefRemind">Reminder</string>
    <string name="prefRemindDesc">Never forget to read mobile devotions</string>

    <!-- about -->
    <string name="about" formatted="false"><![CDATA[<b>German original edition</b><br/><b>Title:</b> Lichtstrahlen 2013<br/><b>Publisher:</b> Deutscher Jugendverband „Entschieden für Christus“ (EC) e.V., <a href="http://www.ec-jugend.d/e">ec-jugend.de</a><br/><br/><b>English edition</b><br/><b>Publisher:</b> World’s Christian Endeavor Union, <a href="http://www.worldsceunion.org/">worldsceunion.org</a><br/><b>Translation:</b> Many thanks to Emily and Shawn Rudy, Andreas Rudolph, Annie Gomado, Helen Driediger-Nortje<br/><br/><b>Publishing company</b><br/><b>&copy; 2011 BORN-VERLAG Medien für Mitarbeiter, www.bornverlag.de</b><br/><br/>Programming: <a href="https://github.com/escoand/lichtstrahlen/wiki">Andreas Sch&ouml;nfelder</a><br/><br/>Copyrights<br/>Bibelleseplan, Monatsspr&uuml;che: &Ouml;kumenische Arbeitsgemeinschaft für Bibellesen, Berlin, <a href="http://www.oeab.de/">oeab.de</a><br/>Scripture taken from the HOLY BIBLE, NEW INTERNATIONAL VERSION. Copyright &copy; 1973, 1978, 1984 International Bible Society.<br/>Linking by courtesy to <a href="http://www.bibleserver.com/">bibleserver.com</a>]]></string>

    <!-- misc -->
    <string name="image">image</string>

    <!-- font size -->
    <string-array name="listScaleValues">
        <item>14</item>
        <item>18</item>
        <item>22</item>
    </string-array>
    <string-array name="listScale">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

</resources>