<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefDisplay" >
        <ListPreference
            android:entries="@array/listScale"
            android:entryValues="@array/listScaleValues"
            android:key="scale"
            android:summary="@string/prefScaleDesc"
            android:title="@string/prefScale" />

        <CheckBoxPreference
            android:key="inverse"
            android:summary="@string/prefInverseDesc"
            android:title="@string/prefInverse" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefOther" >
        <CheckBoxPreference
            android:defaultValue="18"
            android:key="splash"
            android:summary="@string/prefSplashDesc"
            android:title="@string/prefSplash" />
        <CheckBoxPreference
            android:key="remind"
            android:summary="@string/prefRemindDesc"
            android:title="@string/prefRemind" />
    </PreferenceCategory>

</PreferenceScreen>