<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:title="@string/menuBible"
		android:id="@+id/menuBible"
		android:icon="@android:drawable/ic_menu_search"
		/>
	<item
		android:id="@+id/menuToday"
		android:title="@string/menuToday"
		android:icon="@android:drawable/ic_menu_today"
		/>
	<item
		android:id="@+id/menuDate"
		android:title="@string/menuDate"
		android:icon="@android:drawable/ic_menu_my_calendar"
		/>
	<item
		android:id="@+id/menuNotes"
		android:title="@string/menuNotes"
		android:icon="@android:drawable/ic_menu_edit"
		/>
	<item
		android:id="@+id/menuList"
		android:title="@string/menuList"
		android:icon="@android:drawable/ic_menu_agenda"
		/>
	<item
		android:id="@+id/menuInfo"
		android:title="@string/menuInfo"
		android:icon="@android:drawable/ic_menu_info_details"
		/>
</menu>
