<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/prefWidget"
        android:scaleType="fitXY"
        android:src="@drawable/widget_bg_dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/widget_padding_vertical"
        android:paddingLeft="@dimen/widget_padding_horizontal"
        android:paddingRight="@dimen/widget_padding_horizontal"
        android:paddingTop="@dimen/widget_padding_vertical" >

        <TextView
            android:id="@+id/widgetDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-8dp"
            android:layout_toLeftOf="@+id/widgetMonth"
            android:textColor="?android:attr/textColorTertiary"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/widgetMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-3dp"
            android:textColor="?android:attr/textColorTertiary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/widgetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/widgetDay"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorTertiary" />

        <TextView
            android:id="@+id/widgetVerse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/widgetTitle"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/widgetName"
            android:layout_toLeftOf="@id/widgetDay"
            android:ellipsize="middle"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widgetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/msgLoading"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/widgetPreferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_action_overflow_light" />
    </RelativeLayout>

</FrameLayout>